Jolie - adding Leave-one-out reference

--- a/references.bib
+++ b/references.bib
@@ -173,3 +173,12 @@
   year={1980},
   publisher={IOP Publishing}
 }
+@article{shao2016efficient,
+  title={Efficient leave-one-out cross-validation-based regularized extreme learning machine},
+  author={Shao, Zhifei and Er, Meng Joo},
+  journal={Neurocomputing},
+  volume={194},
+  pages={260--270},
+  year={2016},
+  publisher={Elsevier}
+}
