--- a/index.qmd
+++ b/index.qmd
@@ -68,8 +68,8 @@ set, usually in a 70-30 or 90-10 split.
 folds. Each fold is used once as a test set while the rest serve as the
 training set.
 
-**Leave-One-Out Cross-Validation (LOOCV):** A special case of k-fold
-cross-validation where k equals the number of data points. Each data
+**Leave-One-Out Cross-Validation (LOOCV):** This is a special case of k-fold
+cross-validation where k equals the number of data points [@shao2016efficient]. Each data
 point is used once as a test set.
 
 **Stratified Cross-Validation:** Ensures each fold reflects the class
@@ -114,7 +114,7 @@ parameter estimates across folds to yield more stable and efficient
 outcomes. This method demonstrates significant potential in handling
 high-dimensional data and improving parameter estimation.
 
-**For the k-fold cross-validation process, the steps are as follows:**
+**For the k-fold cross-validation process, the steps are as follows and see Figure 1:**
 
 1.  Randomly and evenly split the dataset into k-folds.
 
