--- a/references.bib
+++ b/references.bib
@@ -182,3 +182,13 @@
   year={2016},
   publisher={Elsevier}
 }
+@article{de2020cross,
+  title={Cross-validation: A method every psychologist should know},
+  author={de Rooij, Mark and Weeda, Wouter},
+  journal={Advances in Methods and Practices in Psychological Science},
+  volume={3},
+  number={2},
+  pages={248--263},
+  year={2020},
+  publisher={Sage Publications Sage CA: Los Angeles, CA}
+}
