--- a/index.qmd
+++ b/index.qmd
@@ -239,4 +239,4 @@ ggplot1 = murders %>% ggplot(mapping = aes(x=population/10^6, y=total))
 ### Conclusion
 
 ### References
-
+**More references to be added once more sections of papers are completed**
