--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,10 @@
+@book{ott2015introduction,
+  title={An introduction to statistical methods and data analysis},
+  author={Ott, R Lyman and Longnecker, Micheal T},
+  year={2015},
+  publisher={Cengage Learning}
+}
+
 @article{marcot2021optimal,
   title={What is an optimal value of k in k-fold cross-validation in discrete Bayesian network analysis?},
   author={Marcot, Bruce G and Hanea, Anca M},
