--- a/index.qmd
+++ b/index.qmd
@@ -357,7 +357,7 @@ m2 <- glm(DEATH_EVENT ~ ejection_fraction + serum_creatinine,
 cv.glm(data, m2, K=10)$delta
 ```
 
-In model 1, all predictor variables are included. In model 2, only ejection fraction and serum creatinine are included, as the researchers that provided the data set came to the conclusion that death events could be predicted using those 2 variables alone. Interestingly enough, the first model that included all variables produced a lower MSE (mean square error), indicating that from this CV test, model one would be better to use than model 2.
+With any variation of k-fold cross validation, the dataset is split into k sized folds that will all be equal. Here, the dataset is split in 10 folds. As previously discussed, [@wong2019reliable] mentions 10-fold cross validation analysis to be most effective in most cases. In model 1, all predictor variables are included. In model 2, only ejection fraction and serum creatinine are included, as the researchers that provided the data set came to the conclusion that death events could be predicted using those 2 variables alone. Interestingly enough, the first model that included all variables produced a lower MSE (mean square error), indicating that from this CV test, model one would be better to use than model 2.
 
 ### 5-fold Cross Validation:
 ```{r}
@@ -379,7 +379,7 @@ m2 <- glm(DEATH_EVENT ~ ejection_fraction + serum_creatinine,
 cv.glm(data, m2, K=5)$delta
 ```
 
-Similar to the 10-fold models above, in model 1, all predictor variables are included. In model 2, only ejection fraction and serum creatinine are included. With 5-fold cross validation, the data set is divided into 5 parts (as opposed to 10 in 10-fold). Model 1 still has a lower MSE than the full model that includes all predictor variables.
+Similar to the 10-fold models above, our dataset is split into equal pieces. However, in this case, we are only doing 5 folds compared to our 10-fold analysis above. Again, in model 1, all predictor variables are included. In model 2, only ejection fraction and serum creatinine are included. With 5-fold cross validation, the data set is divided into 5 parts (as opposed to 10 in 10-fold). Model 1 still has a lower MSE than the full model that includes all predictor variables.
 
 ### Single Hold-Out Method:
 ```{r}
@@ -418,7 +418,7 @@ head(validation_SHO)
 mean(validation_SHO$sqerr_m1_SHO, na.rm = TRUE)
 mean(validation_SHO$sqerr_m2_SHO, na.rm = TRUE)
 ```
-Using the Single Hold-Out Method, model 2 provides us with a lower mean squared error. Model 2 includes only ejection fraction and serum creatinine as predictor variables, meaning this reduced model is a better fit according to this cross-validation technique.
+Using the Single Hold-Out Method, the data set is split into a training set and a test/validation set. Here, we are using a 50-50 split. After conducting the analysis, it can be seen that model 2 provides us with a lower mean squared error. Model 2 includes only ejection fraction and serum creatinine as predictor variables, meaning this reduced model is a better fit according to this cross-validation technique.
 
 ### Leave-One-Out Cross-Validation (LOOCV):
 ```{r}
@@ -437,7 +437,7 @@ m2 <- glm(DEATH_EVENT ~ ejection_fraction + serum_creatinine,
 
 cv.glm(data, m2)$delta
 ```
-According to LOOCV, our full model (which includes all predictor variables) is a better fit due to a lower mean squared error.
+Leave-One-Out cross-validation (LOOCV) follows a similar data set splitting technique, but in this case, the data is split k-ways, where k is equal to the number of data points. According to LOOCV, the full model (which includes all predictor variables) is a better fit due to a lower mean squared error compared to the reduced model (which only includes serum creatinine and ejection fraction).
 
 ## Statistical Modeling
 ```{r}
